Fixed some bugs regarding z-indexes and ordering of sections. Added minor adjustments to text in the gallery and about sections.

--- a/src/App.css
+++ b/src/App.css
@@ -238,7 +238,7 @@ button {
     height: 40px;
     color: var(--text-color);
     border-width: 0px;
-    z-index: 1;
+    z-index: 2;
     transition: 200ms ease;
 }
 
@@ -259,6 +259,7 @@ button:active{
     padding: 0px;
     position: relative;
     width: 100px;
+    z-index: 4;
 
 }
 #options {
@@ -478,6 +479,10 @@ button:active{
 .galleryitem{
     flex-shrink: 0;
     height: 200px;
+}
+#gallery label {
+    text-align: center;
+    margin-bottom: -20px;
 }
 
 .image{
